# microbubble

./: .gitignore  .libraries  CMakeLists.txt  README.md  plot.py
applications/: CMakeLists.txt
applications/microbubble/: StokesCylinder.cc  StokesCylinder.h  StokesRhs.cc  StokesRhs.h
applications/microbubble/simplerun/: simplerun.cc
applications/microbubble_stationary/: CMakeLists.txt  StokesCylinder.cc  StokesCylinder.h  StokesRhs.cc  StokesRhs.h
applications/microbubble_stationary/simplerun/: simplerun.cc
src/: CMakeLists.txt  nitsche_poisson.cpp  nitsche_stokes.cpp  nitsche_stokes.h  stokes_channel_cylinder.cpp  stokes_error.cpp
src/cutfem/: CMakeLists.txt  StokesCylinder.cc  StokesCylinder.h  StokesRhs.cc  StokesRhs.h  timedep.cc
src/cutfem/convergence/: convergence.cpp
src/cutfem/error/: CMakeLists.txt  ErrorRhs.cc  ErrorRhs.h  ErrorStokesCylinder.cc  ErrorStokesCylinder.h  error.cpp
src/cutfem/fsi/: CMakeLists.txt
src/cutfem/fsi/falling_sphere/: CMakeLists.txt  compute.py  falling_sphere.cc  falling_sphere.h  plot_data.py  rhs.cc  rhs.h  run.cc
src/cutfem/fsi/moving_sphere/: CMakeLists.txt  moving_sphere.cc  rhs.cc  rhs.h
src/cutfem/heat_eqn/: CMakeLists.txt  README.md  beta_test.cc  condition_number.cc  conv_plot.py  convergence.cc  expressions.py  heat_eqn.cc  heat_eqn.h  rhs.cc  rhs.h  run.cc  tau_comparison.py
src/cutfem/navier_stokes/: CMakeLists.txt  README.md  conv_plot.py  conv_plot_stress.py  convergence.cc  convergence_stationary.cc  expressions.py  expressions_stationary.py  navier_stokes.cc  navier_stokes.h  rhs.cc  rhs.h  rhs_stat.cc  rhs_stat.h  run.cc  stress_computation.cc  tau_comparison.py
src/cutfem/navier_stokes/benchmarks/: CMakeLists.txt  ns_benchmark.cc  ns_benchmark.h  stationary_2D-1.cc  timedep_2D-3.cc  timedep_2D_3_compare.py
src/cutfem/navier_stokes/benchmarks/oscillating_cylinder/: oscillating_cylinder.cc  rhs.cc  rhs.h
src/cutfem/poisson/: CMakeLists.txt  condition_number.cc  conv_plot.py  conv_plot_flux.py  convergence.cc  expressions.py  flux_computation.cc  paraview_settings.py  poisson.cc  poisson.h  rhs.cc  rhs.h  run.cc
src/cutfem/projections/: CMakeLists.txt  README.md  conv_plot.py  convergence.cc  projection_flow.cc  projection_flow.h  rhs.cc  rhs.h  run.cc
src/cutfem/simplerun/: CMakeLists.txt  simplerun.cc  time_dependent.cc
src/cutfem/stokes/: README.md  StokesCylinder.cc  StokesCylinder.h  StokesRhs.h  conv_plot.py
src/cutfem/stokes/convergence/: CMakeLists.txt  convergence.cpp
src/cutfem/stokes/error/: CMakeLists.txt  ErrorRhs.cc  ErrorRhs.h  ErrorStokesCylinder.cc  ErrorStokesCylinder.h  error.cpp
src/cutfem/stokes/simplerun/: CMakeLists.txt  simplerun.cc
src/cutfem/stokes_gen/: CMakeLists.txt  README.md  conv_plot.py  convergence.cc  rhs_gen.cc  rhs_gen.h  run_gen.cc  stokes_gen.cc  stokes_gen.h
src/cutfem/stokes_time/: CMakeLists.txt  README.md  conv_plot.py  convergence.cc  expressions.py  rhs_gen.cc  rhs_gen.h  run_gen.cc  stokes_gen.cc  stokes_gen.h
src/cutfem/stokes_time2/: CMakeLists.txt  README.md  conv_plot.py  conv_plot_flux.py  convergence.cc  convergence_stationary.cc  ex_falling_sphere.cc  ex_falling_sphere.h  ex_falling_sphere_run.cc  ex_moving_ball.cc  ex_moving_ball.h  ex_moving_ball_run.cc  expressions.py  rhs.cc  rhs.h  rhs_stat.cc  rhs_stat.h  run.cc  stokes.cc  stokes.h  stokes_gen.cc  tau_comparison.py
src/cutfem/stokes_time3/: CMakeLists.txt  conv_plot.py  convergence.cc  expressions.py  rhs.cc  rhs.h  run.cc  run_gen.cc  stokes.cc  stokes.h
src/cutfem/utils/: CMakeLists.txt  cutfem_problem.cc  cutfem_problem.h  flow_problem.cc  flow_problem.h  scalar_problem.cc  scalar_problem.h  utils.cc  utils.h
src/cutfem/utils/stabilization/: face_selectors.cc  face_selectors.h  fe_collection_properties.h  jump_stabilization.cc  jump_stabilization.h  jump_stabilization.templates.h  normal_derivative_computer.cc  normal_derivative_computer.h
src/nitsche/: CMakeLists.txt
src/nitsche/poisson/: CMakeLists.txt  conv_plot.py  convergence.cc  poisson.cc  poisson.h  rhs.cc  rhs.h  run.cc
src/nitsche/stokes/: CMakeLists.txt
src/utils/: integration.h  output.h
utils/: betatest.py  expressions.py  job.slurm  plot.py
